# RAG-CHATBOT

./: .gitignore  Dockerfile  README.md  Tests-documentation.md  Trade-offs-analysis.md  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: deps.py  documents.py  health.py  router.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: __init__.py  session.py
backend/app/models/: __init__.py  models.py
backend/app/services/: __init__.py  cache.py  chunker.py  embeddings.py  llm.py  query_cache.py  rag.py
backend/qdrant_local_data/collection/rag_documents/: storage.sqlite
backend/scratch/: test_db.py  test_qdrant.py
backend/test_data/: sample_qdrant.txt  sample_redis.txt
backend/tests/: test_api.py  test_cache.py  test_chunker.py  test_config.py  test_hybrid.py  test_query_cache.py  test_security.py
frontend/: README.md  index.html
frontend/src/: App.css  App.tsx  config.ts  index.css
frontend/src/components/: Auth.tsx
