[project]
name = "scalable-rag-backend"
version = "0.1.0"
description = "FastAPI back-end for Scalable RAG Project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "pydantic-settings>=2.3.0",
    "qdrant-client>=1.9.0",
    "sqlmodel>=0.0.19",
    "asyncpg>=0.29.0",
    "redis>=5.0.4",
    "pypdf>=4.2.0",
    "sentence-transformers>=3.0.0",
    "torch>=2.2.0",
    "python-multipart>=0.0.9",
    "greenlet>=3.0.0",
    "groq>=0.9.0",
    "rank-bm25>=0.2.2",
]





[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
